[package]
name = "tree-sitter-d2"
description = "d2 grammar for the tree-sitter parsing library"
version = "0.7.2"
keywords = ["incremental", "parsing", "d2"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ravsii/tree-sitter-d2"
edition = "2018"
license = "MIT"
build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0"
